style folder re-structure added

--- a/style/style.css
+++ b/style/style.css
@@ -1,968 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+@import url('/themes/base.css');
+
+@import url('/style/home/hero.css');
+@import url('/style/home/limited.css');
+@import url('/style/home/about-us.css');
+@import url('/style/home/what-can.css');
+@import url('/style/home/got-questions.css');
+@import url('/style/home/smarter-work.css');
+@import url('/style/home/footer.css');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.m-width {
-    max-width: 80%;
-    margin: auto;
-}
-
-.get-started {
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 220px;
-    width: 100%;
-    height: 63px;
-    color: #fff;
-    font-size: 16px;
-    text-decoration: none;
-    border-radius: 77px;
-    background-image: linear-gradient(90deg, #8715E4 0%, #800080 100%);
-    font-family: 'Montserrat', sans-serif;
-    box-shadow: 0 15px 24px rgba(230, 34, 116, 0.3);
-}
-
-
-h1 {
-    font-size: 55px;
-    line-height: 70px;
-    font-family: 'Baloo 2', sans-serif;
-    color: #fff;
-}
-
-h3 {
-    font-size: 30px;
-    line-height: 50px;
-    font-family: 'Baloo 2', sans-serif;
-    color: #fff;
-}
-
-p {
-    font-size: 16px;
-    line-height: 30px;
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-}
-
-.hero-section-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
-
-    .hero-background {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        width: 100%;
-        z-index: -1;
-        height: 100%;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .top-right-hero-bg {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 70%;
-        z-index: -1;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .bottom-left-hero-bg {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 70%;
-        z-index: -1;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-}
-
-
-.hero-section-main {
-    max-height: 900px;
-}
-
-.hero-section-main {
-    .nav-bar {
-        padding: 25px 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .title {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-
-            .title-text {
-                font-size: 1.875rem;
-                color: #fff;
-                font-family: 'Baloo 2', sans-serif;
-            }
-        }
-    }
-
-    .hero-section-parent {
-        padding: 3% 0;
-        display: flex;
-        gap: 20px;
-
-        .hero-section-content {
-            flex-basis: 50%;
-
-            .get-started {
-                margin: 30px 0;
-            }
-        }
-
-        .hero-section-image {
-            flex-basis: 50%;
-
-            .skeleton {
-                width: 400px;
-                height: 400px;
-
-                .img {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-        }
-    }
-}
-
-/* hero section END  */
-
-.limited-section-container {
-    background: #01051F;
-    position: relative;
-    width: 100%;
-    z-index: -1;
-
-    .limited-time-bg {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: -1;
-        opacity: .1;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.limited-section {
-    padding: 72px 0;
-
-    .content-heading {
-        max-width: 640px;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .heading {
-            color: #fff;
-            font-size: 45px;
-            line-height: 70px;
-            font-family: 'Baloo 2', sans-serif;
-        }
-
-        .description {
-            color: #fff;
-            font-size: 16px;
-            font-family: 'Montserrat', sans-serif;
-            text-align: center;
-        }
-    }
-
-    .content-box {
-        margin-top: 21px;
-
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        justify-items: center;
-
-        .single-box {
-            max-width: 358px;
-            width: 100%;
-            height: 334px;
-            border-radius: 18px;
-            background: #11152E;
-            padding: 29px;
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            .title {
-                font-size: 20px;
-                line-height: 30px;
-                font-family: 'Baloo 2', sans-serif;
-                padding-top: 26px;
-                padding-bottom: 14px;
-                text-align: center;
-            }
-
-            .description {
-                font-size: 14px;
-                line-height: 29px;
-                font-family: 'Montserrat', sans-serif;
-                text-align: center;
-            }
-        }
-    }
-
-    .struggle-content {
-        font-size: 24px;
-        line-height: 30px;
-        text-align: center;
-        margin-top: 50px;
-        margin-bottom: 31px;
-        font-family: 'Baloo 2', sans-serif;
-    }
-
-    .button {
-        display: flex;
-        justify-content: center;
-    }
-}
-
-/* limited time deal alert END */
-
-
-
-.about-us-section-container {
-    position: relative;
-    width: 100%;
-    padding: 8% 0;
-    display: flex;
-    align-items: center;
-    z-index: -1;
-
-    .about-us-bg {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.about-us-section {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
-    justify-content: center;
-
-    .content {
-
-        .heading {
-            color: #fff;
-            font-size: 45px;
-            line-height: 70px;
-            font-family: 'Baloo 2', sans-serif;
-        }
-
-        .description {
-            color: #fff;
-            font-size: 16px;
-            line-height: 30px;
-            font-family: 'Montserrat', sans-serif;
-            margin-bottom: 30px;
-            width: 100%;
-        }
-    }
-
-    .image-content {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-
-        .img-box {
-            width: 400px;
-            height: 400px;
-
-            .img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-        .img-box-bg {
-            position: absolute;
-            bottom: -47%;
-            right: 0;
-        }
-
-
-    }
-}
-
-/* about us END */
-
-
-
-
-
-
-.what-can-section-container {
-    position: relative;
-    width: 100%;
-    padding: 8% 0;
-    display: flex;
-    align-items: center;
-    z-index: -1;
-
-    .what-can-bg {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .what-can-top-left {
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: -1;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .what-can-bottom-right {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        z-index: -1;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.what-can-section {
-    width: 100%;
-
-    .heading {
-        text-align: center;
-        color: #fff;
-        font-size: 45px;
-        line-height: 50px;
-        font-family: 'Baloo 2', sans-serif;
-    }
-
-    .item-box {
-        margin: 40px 0;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 29px;
-        justify-items: center;
-
-        .single-item {
-            max-width: 261px;
-            width: 100%;
-            height: 66px;
-            border-radius: 7px;
-            border: 1px solid #353B5F;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            p {
-                color: #fff;
-            }
-        }
-    }
-
-    .get-started {
-        margin: auto;
-    }
-}
-
-@media (max-width: 1090px) {
-    .what-can-section {
-        .item-box {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-        }
-    }
-}
-
-@media (max-width: 890px) {
-    .what-can-section {
-        .item-box {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-    }
-}
-
-/* what can END */
-
-
-
-
-
-
-
-
-
-.got-question-section-container {
-    position: relative;
-    width: 100%;
-    padding-top: 5%;
-    display: flex;
-    align-items: center;
-    /* z-index: -1; */
-
-    .got-question-bg {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .got-question-left {
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    .got-question-bottom-right {
-        position: absolute;
-        top: 20%;
-        left: 0;
-        bottom: 0;
-        z-index: -1;
-
-        .img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.got-question-section {
-    width: 100%;
-
-    .heading {
-        text-align: center;
-        color: #fff;
-        font-size: 45px;
-        line-height: 50px;
-        font-family: 'Baloo 2', sans-serif;
-    }
-
-    .description {
-        text-align: center;
-        font-family: 'Montserrat', sans-serif;
-    }
-
-    .item-box-container {
-        margin-top: 30px;
-        display: grid;
-        padding: 0 30px;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-
-        .robot {
-            position: relative;
-
-            .img {
-                width: 100%;
-            }
-
-            .robot-bg {
-                position: absolute;
-                left: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-        .faq-container {
-            width: 100%;
-
-            .accordion {
-                margin-top: 30px;
-                font-family: Arial, Helvetica, sans-serif;
-                max-width: 550px;
-                width: 100%;
-                margin: auto;
-            }
-
-            .accordion-item {
-                margin-bottom: 20px;
-                position: relative;
-            }
-
-            .accordion-title {
-                color: #fff;
-                background-color: #11152E;
-                border-radius: 7px;
-                border: 2px solid #22284F;
-                padding: 17px 30px !important;
-                cursor: pointer;
-                padding: 10px;
-                transition: background-color 1s;
-
-                font-family: 'Baloo 2', sans-serif;
-                font-size: 20px;
-                line-height: normal;
-                text-transform: capitalize;
-
-
-            }
-
-
-            .accordion-title::before {
-                content: '+';
-                position: absolute;
-                top: 25%;
-                right: 20px;
-                font-size: 30px;
-                font-weight: 400;
-                font-family: sans-serif;
-                height: 17px;
-                width: 17px;
-            }
-
-            .accordion-content {
-                color: #FFF;
-
-                font-family: 'Montserrat', sans-serif;
-                font-size: 16px;
-                font-style: normal;
-                font-weight: 500;
-                line-height: 30px;
-
-                display: none;
-                padding: 10px 30px;
-                background: #000;
-            }
-
-            .accordion-item.active .accordion-content {
-                display: block;
-            }
-
-            .accordion-item.active .accordion-title::before {
-                content: '\00d7';
-                position: absolute;
-                top: 5%;
-                right: 20px;
-                font-size: 28px;
-            }
-
-            .accordion-item.active .accordion-title {
-                border: 0;
-                border-radius: 0;
-                border-top: 2px solid transparent;
-                border-left: 2px solid transparent;
-                border-right: 2px solid transparent;
-                background: linear-gradient(#000, #000) padding-box,
-                    linear-gradient(to right, #800080, #E62274, #F9CE00) border-box;
-                border-top-left-radius: 7px;
-                border-top-right-radius: 7px;
-            }
-
-
-            .accordion-item.active .accordion-content {
-                border: 0;
-                border-radius: 0;
-                border-bottom: 2px solid transparent;
-                border-left: 2px solid transparent;
-                border-right: 2px solid transparent;
-                background: linear-gradient(#000, #000) padding-box,
-                    linear-gradient(to right, #800080, #E62274, #F9CE00) border-box;
-                border-bottom-left-radius: 7px;
-                border-bottom-right-radius: 7px;
-                border-top: 1px solid #212121;
-            }
-        }
-    }
-
-    .get-started {
-        margin: auto;
-    }
-}
-
-
-@media (max-width: 890px) {
-    .got-question-section-container {
-        .got-question-section {
-
-            .item-box-container {
-                display: grid;
-                grid-template-columns: repeat(1, 1fr);
-                justify-items: center;
-
-                .robot {
-                    width: 100%;
-
-                    .img {
-                        width: 100%;
-                    }
-                }
-            }
-
-        }
-    }
-}
-
-/* got question END */
-
-
-
-
-
-.smarter-work-section-container {
-    background: #01051F;
-    width: 100%;
-    padding: 8% 0;
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-.content-image {
-    position: absolute;
-    top: 5%;
-    right: 0%;
-    max-width: 60%;
-    width: 100%;
-    max-height: 664px;
-    height: 100%;
-
-    .img {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-.smarter-work-section {
-    width: 100%;
-
-    .content-text {
-        width: 45%;
-        padding-right: 10%;
-
-        .heading {
-            color: #fff;
-            font-size: 45px;
-            line-height: 50px;
-            font-family: 'Baloo 2', sans-serif;
-        }
-
-        .description {
-            margin: 20px 0;
-            color: #fff;
-            font-size: 16px;
-            line-height: 30px;
-            font-family: 'Montserrat', sans-serif;
-        }
-    }
-
-    .card-box {
-        margin-top: 45px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        align-items: center;
-        gap: 20px;
-
-        .single-item {
-            max-width: 358px;
-            width: 100%;
-            margin: auto;
-            height: 216px;
-            z-index: 1;
-
-            border: 2px solid transparent;
-            background: linear-gradient(#030720, #030720) padding-box,
-                linear-gradient(to right, #800080, #E62274, #F9CE00) border-box;
-            border-radius: 7px;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-
-}
-
-
-@media (max-width: 1000px) {
-    .smarter-work-section-container {
-        .content-image {
-            display: none;
-        }
-
-        .smarter-work-section {
-            .content-text {
-                width: 100%;
-            }
-        }
-    }
-}
-
-
-@media (max-width:768px) {
-    .smarter-work-section {
-        .card-box {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-        }
-    }
-}
-
-
-@media (max-width:460px) {
-    .smarter-work-section {
-        .card-box {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            gap: 20px;
-        }
-    }
-}
-
-/* smarter work END */
-
-
-
-
-
-
-.footer-section-container {
-    background: #11152E;
-    padding: 23px 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    p {
-        font-size: 16px;
-        font-family: 'Montserrat', sans-serif;
-    }
-
-}
-
-/* footer  END */
-
-
-
-@media (max-width: 1090px) {
-    .what-can-section {
-        .item-box {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-        }
-    }
-}
-
-@media (max-width: 890px) {
-    .what-can-section {
-        .item-box {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-    }
-}
-
-/* smarter work END */
-
-
-@media (max-width: 868px) {
-    .about-us-section {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-
-        .content {
-            padding: 0 15px;
-        }
-    }
-}
-
-
-@media (max-width: 1400px) {
-    .limited-section {
-        .content-box {
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px
-        }
-    }
-}
-
-@media (max-width: 768px) {
-    .limited-section {
-        .content-box {
-            grid-template-columns: repeat(1, 1fr);
-            justify-items: center;
-            gap: 10px
-        }
-    }
-}
-
-
-
-@media (max-width: 1350px) {
-    h1 {
-        font-size: 45px;
-        line-height: 65px;
-    }
-
-    h3 {
-        font-size: 25px;
-        line-height: 40px;
-    }
-
-    p {
-        font-size: 15px;
-        line-height: 27px;
-    }
-}
-
-@media (max-width: 1150px) {
-    h1 {
-        font-size: 45px;
-        line-height: 65px;
-    }
-
-    h3 {
-        font-size: 25px;
-        line-height: 45px;
-    }
-
-    p {
-        font-size: 15px;
-        line-height: 27px;
-    }
-}
-
-@media (max-width: 950px) {
-    h1 {
-        font-size: 33px;
-        line-height: 55px;
-    }
-
-    h3 {
-        font-size: 19px;
-        line-height: 43px;
-    }
-
-    p {
-        font-size: 12px;
-        line-height: 25px;
-    }
-}
-
-
-@media (max-width:1000px) {
-    .hero-section-main {
-        .hero-section-parent {
-            position: relative;
-
-            .hero-section-content {
-                flex-basis: 100%;
-            }
-
-            .hero-section-image {
-                position: absolute;
-                top: 6%;
-                right: -9%;
-                opacity: .5;
-            }
-        }
-    }
-}
-
-@media (max-width:570px) {
-    .get-started {
-        max-width: 140px;
-        height: 52px;
-        color: #fff;
-        font-size: 16px;
-    }
-
-    .hero-section-parent {
-        .hero-section-main {
-            .nav-bar {
-                .title {
-                    .title-text {
-                        font-size: 1.1rem;
-                    }
-                }
-            }
-        }
-    }
-}
